M2K-kitchensink/kitchensink-app/deploy/cicd/tekton/kitchensink-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: kitchensink-app
  name: kitchensink-app
spec:
  rules:
    - host: kitchensink-app.com
      http:
        paths:
          - backend:
              serviceName: el-kitchensink-app-git-repo
              servicePort: port-8080
            path: /el-kitchensink-app-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
